// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderOption should render correctly: branch 1`] = `
<React.Fragment>
  <span>
    branch-7.4
  </span>
</React.Fragment>
`;

exports[`renderOption should render correctly: branch doesn't exist 1`] = `
<Tooltip
  overlay="baseline.reference_branch.does_not_exist.branch-nope"
>
  <span>
    branch-nope
     
    <AlertErrorIcon />
  </span>
</Tooltip>
`;

exports[`renderOption should render correctly: disabled 1`] = `
<React.Fragment>
  <span
    title="baseline.reference_branch.cannot_be_itself"
  >
    disabled
  </span>
</React.Fragment>
`;

exports[`renderOption should render correctly: main 1`] = `
<React.Fragment>
  <span>
    master
  </span>
  <div
    className="badge spacer-left"
  >
    branches.main_branch
  </div>
</React.Fragment>
`;

exports[`should render correctly: Branch level - no other branches 1`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.reference_branch"
>
  <p>
    baseline.reference_branch.description
  </p>
  <div
    className="big-spacer-top display-flex-column"
  >
    <MandatoryFieldsExplanation
      className="spacer-bottom"
    />
    <label
      className="text-middle"
      htmlFor="reference_branch"
    >
      <strong>
        baseline.reference_branch.choose
      </strong>
      <MandatoryFieldMarker />
    </label>
    <SearchSelect
      autofocus={false}
      className="little-spacer-top spacer-bottom"
      defaultOptions={
        Array [
          Object {
            "isMain": true,
            "value": "master",
          },
        ]
      }
      minimumQueryLength={1}
      onSearch={[Function]}
      onSelect={[Function]}
      renderOption={[Function]}
      value={
        Object {
          "isMain": true,
          "value": "master",
        }
      }
    />
  </div>
</RadioCard>
`;

exports[`should render correctly: Branch level 1`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.reference_branch"
>
  <p>
    baseline.reference_branch.description
  </p>
  <div
    className="big-spacer-top display-flex-column"
  >
    <MandatoryFieldsExplanation
      className="spacer-bottom"
    />
    <label
      className="text-middle"
      htmlFor="reference_branch"
    >
      <strong>
        baseline.reference_branch.choose
      </strong>
      <MandatoryFieldMarker />
    </label>
    <SearchSelect
      autofocus={false}
      className="little-spacer-top spacer-bottom"
      defaultOptions={
        Array [
          Object {
            "isMain": true,
            "value": "master",
          },
          Object {
            "isMain": false,
            "value": "branch-7.9",
          },
        ]
      }
      minimumQueryLength={1}
      onSearch={[Function]}
      onSelect={[Function]}
      renderOption={[Function]}
      value={
        Object {
          "isMain": true,
          "value": "master",
        }
      }
    />
  </div>
</RadioCard>
`;

exports[`should render correctly: Project level 1`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.reference_branch"
>
  <p>
    baseline.reference_branch.description
  </p>
  <p
    className="spacer-top"
  >
    baseline.reference_branch.description2
  </p>
  <div
    className="big-spacer-top display-flex-column"
  >
    <MandatoryFieldsExplanation
      className="spacer-bottom"
    />
    <label
      className="text-middle"
      htmlFor="reference_branch"
    >
      <strong>
        baseline.reference_branch.choose
      </strong>
      <MandatoryFieldMarker />
    </label>
    <SearchSelect
      autofocus={false}
      className="little-spacer-top spacer-bottom"
      defaultOptions={
        Array [
          Object {
            "isMain": true,
            "value": "master",
          },
          Object {
            "isMain": false,
            "value": "branch-7.9",
          },
        ]
      }
      minimumQueryLength={1}
      onSearch={[Function]}
      onSelect={[Function]}
      renderOption={[Function]}
      value={
        Object {
          "isMain": true,
          "value": "master",
        }
      }
    />
  </div>
</RadioCard>
`;
